@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-07T08:08:26Z",
-  "count_outdated" : 83,
-  "uniques_outdated" : 70,
+  "timestamp" : "2022-10-09T16:07:24Z",
+  "count_outdated" : 84,
+  "uniques_outdated" : 71,
   "count" : 90,
   "uniques" : 77,
   "clones" : [
-    {
-      "timestamp": "2022-09-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-26T00:00:00Z",
       "count": 1,
