@@ -1,3 +1,11 @@
+2022-10-09T16:07:24Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3214744952
+* notice: last 14d: unq all: 3 6
+* notice: prev accum: outdated-unq outdated-all / unq all: 70 83 / 77 90
+* notice: next accum: outdated-unq outdated-all / unq all: 71 84 / 77 90
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-09-25] / []
+
 2022-10-07T08:08:26Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3203225075
 * notice: last 14d: unq all: 4 7
